<resources>
    <string name="app_name">简易知乎日报</string>

    <string name="not_network">没有网络</string>
    <string name="action_start">收藏</string>
    <string name="action_about">关于</string>
    <string name="date_format">yyyy年M月d日 EEEE</string>
    <string name="favorite">收藏夹</string>
    <string name="refresh">刷新成功</string>
    <string name="zhihu_daily">知乎日报</string>

    <!-- about me -->
    <string name="version">版本: 1.0</string>
    <string name="tips">简介</string>
    <string name="tips_content">这是一个模仿知乎日报的简易版</string>
    <string name="about_me">关于作者</string>
    <string name="about_me_content">一个热爱Google和Android的开发者,
        如果你有好的idea或建议，发送邮件跟我交流!</string>
    <string name="my_email">gedengmin@126.com</string>
    <string name="email_not_install">您的手机没有安装邮件APP</string>

</resources>
