<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_name"
            android:id="@+id/versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/version"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tips"
            android:textColor="@color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/tips_content"
            android:textSize="16dp"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/about_me"
            android:textColor="@color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/about_me_content"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:autoLink="email"
            android:gravity="center_vertical"
            android:text="@string/my_email"
            android:textColor="@color/darker_gray"
            android:textIsSelectable="true"/>

    </LinearLayout>

</LinearLayout>
